arurmando conexao com supabase e melhorando logs

--- a/public/logs.html
+++ b/public/logs.html
@@ -58,7 +58,7 @@
   </style>
 </head>
 <body>
-  <h1>Logs</h1>
+  <h1>RD Integration - Logs</h1>
 
   <div class="controls">
     <button class="page-size" data-size="20">20 por página</button>
